--- a/custom_components/delijn_tracker/manifest.json
+++ b/custom_components/delijn_tracker/manifest.json
@@ -2,11 +2,11 @@
     "domain": "delijn_tracker",
     "name": "De Lijn Tracker",
     "config_flow": true,
-    "documentation": "https://github.com/yourusername/ha-delijn",
-    "issue_tracker": "https://github.com/yourusername/ha-delijn/issues",
+    "documentation": "https://github.com/joshburkard/delijn_tracker",
+    "issue_tracker": "https://github.com/joshburkard/delijn_tracker/issues",
     "iot_class": "cloud_polling",
-    "version": "2025.01.09.006",
+    "version": "2025.01.09.007",
     "requirements": [],
     "dependencies": [],
-    "codeowners": ["@yourusername"]
+    "codeowners": ["@joshburkard"]
 }
